--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="language" id="fr" onclick="changeLanguage('fr')">FR</div>
             <div class="language" id="en" onclick="changeLanguage('en')">EN</div>
             <div class="language" id="nl" onclick="changeLanguage('nl')">NL</div>
+            <div onclick="loadBrand('fr', 'ninja')">NINJA</div>
         </div>
     </div>
 
