JS et HTML finis mais il manque le CSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
             <div class="language" id="fr" onclick="changeLanguage('fr')">FR</div>
             <div class="language" id="en" onclick="changeLanguage('en')">EN</div>
             <div class="language" id="nl" onclick="changeLanguage('nl')">NL</div>
-            <div onclick="loadBrand('fr', 'ninja')">NINJA</div>
+        </div>
+
+        <div id="styleSwitches">
+            <button onclick="changeStyle('style1.css')">Style 1</button>
+            <button onclick="changeStyle('style2.css')">Style 2</button>
+            <button onclick="changeStyle('style3.css')">Style 3</button>
+            <button onclick="changeStyle('style4.css')">Style 4</button>
         </div>
     </div>
 
